--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,12 +48,12 @@ a, a:focus, a:hover {
 }
 
 a:focus, a:hover {
-  color: #28ABE3;
+  color: #92CA5A;
 }
 
 .btn-main {
-  background: #28ABE3;
-  border: 1px solid #28ABE3;
+  background: #92CA5A;
+  border: 1px solid #92CA5A;
   color: #fff;
   display: inline-block;
   font-size: 14px;
@@ -119,7 +119,7 @@ a:focus, a:hover {
 }
 
 .section-sm {
-  padding: 70px 0;
+  padding: 40px 0;
 }
 
 .section-xs {
@@ -248,6 +248,10 @@ a:focus, a:hover {
   overflow: hidden;
 }
 
+.title2 {
+  overflow: hidden;
+}
+
 .title h2 {
   font-weight: 600;
   font-size: 35px;
@@ -265,11 +269,11 @@ a:focus, a:hover {
 }
 
 .border {
-  height: 2px;
+  height: 4px;
   margin: 20px auto 20px;
   position: relative;
   width: 80px;
-  background: #28ABE3;
+  background: #92CA5A;
 }
 
 .bg-gray {
@@ -383,6 +387,8 @@ a:focus, a:hover {
 
 .slick-slide {
   outline: none;
+  /* margin-left: 15px;
+  margin-right: 15px; */
 }
 
 .logo {
@@ -432,11 +438,11 @@ a:focus, a:hover {
 
 .navigation .navbar-light .navbar-nav .nav-item .nav-link:hover, .navigation .navbar-light .navbar-nav .nav-item .nav-link:active, .navigation .navbar-light .navbar-nav .nav-item .nav-link:focus {
   background: none;
-  color: #28ABE3;
+  color: #92CA5A;
 }
 
 .navigation .navbar-light .navbar-nav .nav-item.active .nav-link {
-  color: #28ABE3;
+  color: #92CA5A;
 }
 
 @media (max-width: 991px) {
@@ -664,7 +670,7 @@ a:focus, a:hover {
 
 .slider-item h1 {
   color: #fff;
-  font-size: 60px;
+  font-size: 50px;
   line-height: 70px;
   letter-spacing: 2px;
   font-weight: 700;
@@ -714,7 +720,7 @@ a:focus, a:hover {
   z-index: 9;
   height: 70px;
   width: 70px;
-  background: rgba(40, 171, 227, 0.5);
+  background: rgba(146, 202, 90, 0.5);
   color: #fff;
   border: 0;
   line-height: 70px;
@@ -752,7 +758,7 @@ a:focus, a:hover {
 }
 
 .slick-arrow:hover {
-  background: #28ABE3;
+  background: #92CA5A;
 }
 
 .prevArrow {
@@ -1261,7 +1267,6 @@ a:focus, a:hover {
 ==================================================================*/
 .service-2 .service-item {
   border: 1px solid #eee;
-  margin-bottom: 30px;
   padding: 50px 20px;
   transition: all 0.3s ease 0s;
 }
@@ -2334,6 +2339,16 @@ a:focus, a:hover {
   }
   .author-avatar {
     margin-right: 10px;
+  }
+
+  .s1 .container .row {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .s2 .service-item .row {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
