--- a/public/assets/plugins/slick/slick.css
+++ b/public/assets/plugins/slick/slick.css
@@ -54,7 +54,8 @@
     top: 0;
     left: 0;
 
-    display: block;
+    display: flex;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
 }
