--- a/public/assets/css/beranda.css
+++ b/public/assets/css/beranda.css
@@ -1,8 +1,28 @@
+.navigation .container .navbar .auth {
+    padding-left: 175px;
+}
+
+.navigation .container .navbar .auth .border {
+    height: 30px;
+    margin: 20px auto 20px;
+    position: relative;
+    width: 40px;
+    background: #92CA5A;
+}
+
+.navigation .container .navbar .auth .dropdown-toggle::after {
+    content: none;
+}
+
+.navigation .container .navbar .auth .img-profile {
+    max-width: 40px;
+}
+
 .line{
     width: 10px;
     height: 7%;
     background-color: #F0F0F0;
-  }
+}
   
 .circle {
     height: 80px;
@@ -34,7 +54,24 @@
     background-color: transparent;
 }
 
+.center {
+    display: flex;
+    align-items: center;
+}
+
 @media only screen and (max-width: 767px) {
+    .navigation .container .navbar .auth {
+        padding-left: 20px;
+    }
+
+    .navigation .container .navbar .auth .border {
+        height: 0px;
+        margin: 0px;
+        position: relative;
+        width: 0px;
+        background: #92CA5A;
+    }
+
     .img-position-1 {
         display: flex;
         justify-content: center;
@@ -57,4 +94,4 @@
     .bg-line {
         background-color: #F0F0F0;
     }
-  }
+}
