--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -260,7 +260,6 @@ a:focus, a:hover {
 
 .title p {
   color: #848484;
-  width: 50%;
   margin: 0 auto;
 }
 
@@ -427,7 +426,7 @@ a:focus, a:hover {
 }
 
 .navigation .navbar-light .navbar-nav .nav-item .nav-link {
-  color: #fff;
+  color: #000;
   font-size: 14px;
   line-height: 26px;
   padding: 20px 15px;
@@ -559,7 +558,7 @@ a:focus, a:hover {
 }
 
 .hero-area {
-  background-image: url("../assets/images/slider/slider-bg-1.jpg");
+  /* background-image: url("../assets/images/slider/slider-bg-1.jpg"); */
   background-size: cover;
   height: 100vh;
   position: relative;
@@ -926,7 +925,7 @@ a:focus, a:hover {
 .contact-form input:hover,
 .contact-form textarea:hover,
 .contact-form #contact-submit:hover {
-  border-color: #28ABE3;
+  border-color: #92CA5A;
 }
 
 .contact-form #contact-submit {
@@ -934,7 +933,7 @@ a:focus, a:hover {
   padding: 15px 0;
   width: 100%;
   margin: 0;
-  background: #28ABE3;
+  background: #92CA5A;
   color: #fff;
   border-radius: 0;
 }
@@ -972,9 +971,9 @@ a:focus, a:hover {
 }
 
 .social-icon ul li a:hover {
-  background: #28ABE3;
+  background: #92CA5A;
   color: #fff;
-  border: 1px solid #28ABE3;
+  border: 1px solid #92CA5A;
 }
 
 .social-icon ul li a:hover i {
@@ -1154,14 +1153,14 @@ a:focus, a:hover {
   font-size: 14px;
   padding: 8px 20px;
   text-transform: uppercase;
-  background: #28ABE3;
+  background: #92CA5A;
   border: none;
   color: #fff;
   outline: none;
 }
 
 .portfolio-filter button.active {
-  background: #28ABE3;
+  background: #92CA5A;
   color: #fff;
   border-radius: 50px;
 }
@@ -1217,7 +1216,7 @@ a:focus, a:hover {
 }
 
 .portfolio-block .caption .search-icon {
-  background: #28ABE3;
+  background: #92CA5A;
   color: #fff;
   display: inline-block;
   padding: 4px 13px;
@@ -1769,7 +1768,7 @@ a:focus, a:hover {
 }
 
 .widget-categories-list li a:hover {
-  background: #28ABE3;
+  background: #92CA5A;
   color: #fff;
   padding-left: 20px;
 }
@@ -1886,7 +1885,7 @@ a:focus, a:hover {
 }
 
 .next-prev a:hover {
-  color: #28ABE3;
+  color: #92CA5A;
 }
 
 .next-prev .prev-post i {
@@ -2030,7 +2029,7 @@ a:focus, a:hover {
 }
 
 .top-footer li a:hover {
-  color: #28ABE3;
+  color: #92CA5A;
 }
 
 .footer-bottom {
